--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-/* Mods by NAKKI (@nak.kiwi on insta)*/
-/* Original code from https://orchallenge.es */
-
+/* 2024 mods by NAKKI (@nak.kiwi on insta)*/
 
 :root {
     --color1: #F9CC3E;
