--- a/css/style.css
+++ b/css/style.css
@@ -594,11 +594,22 @@ body {
     height: 30vh;
 }
 
-.logos {
-    width: 100vw;
+.logos img {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.widthLimit {
+    max-width: 800px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-content: space-between;
+    row-gap: 2rem;
+    flex-wrap: wrap;
+    margin-top: 2rem;
 }
 
 .footer-socials li {
@@ -676,12 +687,12 @@ body {
 
 /* Retos */
 .retos {
-    margin-left: 10%;
-    margin-right: 10%;
-    max-width: 800px;
-
-    margin-top: 200px;
-    margin-bottom: 200px;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 800px;
+	margin-top: 200px;
+	margin-bottom: 200px;
+	width: 80%;
 }
 .retos h2 {
     margin-bottom: 0px;
