--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
     height: auto;
     display: none;
 }
+
 .logo::after {
     content: "";
     background-image: url("https://utfs.io/f/8JQcvMcXxzFviKKjeT0AjvMNZXQoWlKx7SCkH6yw9IfVPUeB");
@@ -211,13 +212,14 @@ body {
 
 .header-body::after {
     content: "";
-    background-image: url("https://utfs.io/f/8JQcvMcXxzFvwxSMY86pxvP2imLB8yJMNaFe3tqjUVX0rYAO");
+    background-image: url("../img/2026.png");
     position: absolute;
-    top: 120px;
-    left: 720px;
-    width: 500px;
-    height: 300px;
-    background-size: cover;
+    top: 100px;
+    left: 680px;
+    width: 600px;
+    height: 420px;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .titles {
@@ -252,7 +254,7 @@ body {
     /* min-height: 100vh; */
     margin: 10px;
     padding: 7% 0 0 0;
-    
+
     /* Center content */
     display: flex;
     flex-direction: column;
@@ -273,13 +275,15 @@ body {
     padding: 0 7% 0 7%;
 }
 
-* > h2, .intro > h1 {
+*>h2,
+.intro>h1 {
     color: var(--fontColor1) !important;
     text-align: center !important;
     font-family: "Rubik Mono One" !important;
     text-shadow: 0px 4px 0px var(--color1) !important;
-    
+
 }
+
 /*Todo: remove other h2 styles*/
 
 .second-section p {
@@ -294,7 +298,8 @@ body {
     margin: 10px;
 }
 
-.second-section div div { /* container */
+.second-section div div {
+    /* container */
     display: flex;
     flex: 1;
     flex-direction: column;
@@ -309,7 +314,7 @@ body {
     transition: transform 0.3s;
 }
 
-.second-section > *{
+.second-section>* {
     max-width: 1200px;
 }
 
@@ -335,7 +340,7 @@ body {
     background-color: var(--color2);
     transition: all 0.1s;
     border: 2px solid transparent;
-    
+
 }
 
 .container button:hover {
@@ -589,6 +594,7 @@ body {
         row-gap: 20px;
     }
 }
+
 .vl {
     margin: 20px 10px;
     border-left: 6px solid white;
@@ -600,6 +606,7 @@ body {
     height: min-content;
     justify-content: center;
 }
+
 .logos img {
     width: 80%;
     height: auto;
@@ -640,10 +647,13 @@ body {
     opacity: 80%;
     font-size: 1.2rem;
     filter: drop-shadow(0px 2px 0px var(--color2));
-    &:hover{
+
+    &:hover {
         filter: drop-shadow(0px 4px 1px var(--color2));
         translate: 0px -4px;
-    };
+    }
+
+    ;
     transition: all 0.1s;
 }
 
@@ -667,6 +677,7 @@ body {
     top: 10px;
     width: 140px
 }
+
 .logo-cover {
     height: 90px;
 }
@@ -691,21 +702,24 @@ body {
 
 /* Retos */
 .retos {
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 800px;
-	margin-top: 200px;
-	margin-bottom: 200px;
-	width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    width: 80%;
 }
+
 .retos h2 {
     margin-bottom: 0px;
 }
+
 .retos h3 {
     font-family: "Rubik Mono One";
     color: var(--color3);
 }
-.retos > p {
+
+.retos>p {
     text-align: center;
     margin-bottom: 1rem;
 }
@@ -714,6 +728,7 @@ body {
     text-align: justify;
     margin-bottom: 1rem;
 }
+
 .retos button {
     font-weight: 300;
     font-size: 16px;
@@ -733,7 +748,7 @@ body {
     color: var(--fontColor2);
 }
 
-#loadOverlay{
+#loadOverlay {
     opacity: 0;
     transition: all 1s;
     pointer-events: none;
